--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 	background-size: cover;
 	background-position: center;
 } */
-nav{
+/* nav{
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -17,32 +17,32 @@ nav{
 	height: 70px;
 	
 
-} 
-.logo{
+}  */
+/* .logo{
 	color: white;
 	font-size: 18px;
-}
+} */
 /* span{
 	color: rgb(94, 0, 24); 
 } */
- ul li{
+ /* ul li{
 	list-style-type: none;
 	display: inline-block;
 	padding: 10px 20px;
-}
- a{
+} */
+ /* a{
 	color: white;
 	text-decoration: none;
 	font-weight: bold;
-}
- a:hover{
+} */
+ /* a:hover{
 	color: brown;
 	transition: .3s;
-}
-a:link{
+} */
+/* a:link{
 	text-decoration: none;
-}
-button{
+} */
+/* button{
 	border: none;
 	background: brown;
 	border-radius: 30px;
@@ -51,23 +51,24 @@ button{
 	font-weight: bold;
 	font-size: 15px;
 	transition: .4s;
-}
-button:hover{
+} */
+/* button:hover{
 	transform: scale(1.3);
 	cursor: pointer;
-}
+} */
 .caro{
-    height: 550px;
+    height: 600px;
 }
 .caroimg{
-	height: 550px;
-	margin-bottom: 200px;
-
-}
-.head1{
+	height: 600px;
+	}
+	.carocon{
+		margin-bottom: 20px;
+	}
+/* .head1{
 	text-align: center;
 	margin-bottom: 20px;
-}
+} */
 .abt{
 	margin-top: 30px;
 	margin-bottom: 30px;
@@ -75,8 +76,20 @@ button:hover{
 .imgcard{
 	height: 250px;
 }
-footer{
+.footer{
 	background-color: crimson;
-	padding: 1.5rem,0;
+	padding-top: 5px;
 	color: white;
+}
+
+.navimg{
+	width: 100px;
+	height: auto;
+}
+.navcon{
+	padding-left: 5%;
+	padding-right: 5%;
+}
+.navli{
+	justify-content: end;
 }
